--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -1,10 +1,57 @@
 {
-  "languages": {
-    "en": "Ingles",
-    "es": "Español",
-    "fr": "Frances",
-    "zh": "Chino",
-    "ko": "Coreano"
+  "activity": {
+    "no_activity": "No tienes actividad por el momento.",
+    "start": "Puedes comenzar aprobando MANA desde {settings_link}",
+    "pending": "Pendiente",
+    "completed": "Completada"
+  },
+  "address": {
+    "its_you": "Eres tú!"
+  },
+  "atlas": {
+    "owner": "Dueño: {owner}",
+    "no_owner": "Sin Dueño",
+    "your_parcel": "Tu parcela",
+    "on_sale": "En Venta: ",
+    "loading": "Cargando",
+    "road": "Carretera"
+  },
+  "buy_mana": {
+    "title": "Convertir ETH en MANA",
+    "action": "Comprar Más",
+    "available_eth": "Disponible: {eth} ETH",
+    "receive": "Recibir",
+    "pay_with": "Pagar con",
+    "powered_by": "por {bancor_link}",
+    "rate": "Tasa",
+    "slippage": "Deslizamiento",
+    "not_enough": "No tienes suficiente ETH para pagar esto",
+    "amount_too_big": "Este monto es demaciado grande para la red de Bancor"
+  },
+  "color_key": {
+    "title": "Mapa de colores",
+    "yours": "Tuya",
+    "taken": "Asignada",
+    "district": "Distrito",
+    "contribution": "Contribución",
+    "roads": "Caminos",
+    "plaza": "Plaza",
+    "unowned": "Sin dueño",
+    "loading": "Cargando",
+    "on_sale": "En venta"
+  },
+  "contribution": {
+    "proposal": "propuesta"
+  },
+  "derivation_path": {
+    "invalid": "El derivation path es incorrecto. Debe seguir el siguiente patrón 44'/60|61'/x'/n"
+  },
+  "footer": {
+    "color_key": "Mapa de Colores",
+    "privacy_policy": "Política de Privacidad",
+    "terms": "Términos & Condiciones",
+    "copyright": "© 2018 Decentraland. Todos los derechos reservados.",
+    "mini_copyright": "© 2018 Decentraland."
   },
   "global": {
     "atlas": "Atlas",
@@ -34,16 +81,20 @@
     "connecting": "Conectando",
     "click_here": "Pincha aquí"
   },
-  "address": {
-    "its_you": "Eres tú!"
+  "homepage": {
+    "hero_title": "Elige tu ubicación ideal en Genesis City",
+    "hero_subtitle": "Mercado de LAND de Decentraland. Sin comisiones.",
+    "get_started": "Comenzar",
+    "watch_tutorial": "Mira el tutorial",
+    "newest_lands": "Nuevas LAND",
+    "view_more": "Ver Más"
   },
-  "atlas": {
-    "owner": "Dueño: {owner}",
-    "no_owner": "Sin Dueño",
-    "your_parcel": "Tu parcela",
-    "on_sale": "En Venta: ",
-    "loading": "Cargando",
-    "road": "Carretera"
+  "languages": {
+    "en": "Ingles",
+    "es": "Español",
+    "fr": "Frances",
+    "zh": "Chino",
+    "ko": "Coreano"
   },
   "marketplace": {
     "empty": "Oops... no encontramos nada aquí.",
@@ -53,26 +104,25 @@
       "close_to_expire": "Por terminar"
     }
   },
-  "profile_page": {
-    "empty": "El usuario no tiene {content}",
-    "on_sale": "En Venta"
-  },
-  "publication": {
-    "acquired_at": "Adquirida en {date}",
-    "expired_at": "Expiró {time}",
-    "expires_in": "Expira {time}",
-    "expires_in_more_than_years": "Expira en más de {years} años",
-    "view": "Ver",
-    "sold": "Vendida",
-    "canceled": "Cancelada"
-  },
-  "contribution": {
-    "proposal": "propuesta"
-  },
   "parcel": {
     "view": "Ver",
     "no_name": "Sin nombre",
     "no_description": "Sin descripción"
+  },
+  "parcel_buy": {
+    "buy_land": "Comprar LAND",
+    "about_to_buy": "Estas por comprar {parcel_name} {parcel_price}",
+    "approved_balance": "Tu balance aprobado es {approved_balance}",
+    "needs_at_least": "Necesitas por lo menos {mana} para comprar esta LAND.",
+    "buy_mana": "{click_here} para comprar MANA.",
+    "didnt_approve": "No has autorizado el uso de MANA",
+    "please_approve": "Por favor entra en {settings_link} y permite al contrato de Mercado a operar MANA por tu cuenta",
+    "total_balance": "Tu balance es {balance}"
+  },
+  "parcel_cancel": {
+    "cancel_land": "Cancelar la venta de LAND",
+    "about_to_cancel": "Estás por cancelar la venta de {parcel}.",
+    "not_for_sale": "La parcela {parcel} no está en venta."
   },
   "parcel_detail": {
     "description": "Descripción",
@@ -107,57 +157,21 @@
       "auction": "Subasta"
     }
   },
-  "parcel_tags": {
-    "road": "Camino",
-    "plaza": "Plaza",
-    "district": "Distrito",
-    "adjacent": "Adyacente",
-    "proximity":
-      "{distance} {distance, plural, one {parcela} other {parcelas}} de distancia"
-  },
   "parcel_edit": {
     "edit_land": "Editar LAND",
     "set_name_and_desc": "Configura un nombre y descripción para {parcel_name}",
     "name": "Nombre",
     "description": "Descripción"
   },
-  "parcel_transfer": {
-    "transfer_land": "Transferir LAND",
-    "about_to_transfer": "Estas por transferir {parcel_name}",
-    "irreversible":
-      "Recuerda que transferir LAND es una operación irreversible.",
-    "check_address": "Por favor revisa la dirección cuidadosamente",
-    "cant_transfer":
-      "Esta LAND no puede ser transferida porque se encuentra en venta.",
-    "recipient_address": "Dirección de destino",
-    "unknown_error":
-      "Un problema desconocido ha ocurrido, los detalles se encuentran debajo.",
-    "error_persists":
-      "Si el problema persiste, contáctate con nosotros en {community_chat_link}",
-    "placeholder": "Ejemplo: {address}"
-  },
-  "parcel_buy": {
-    "buy_land": "Comprar LAND",
-    "about_to_buy": "Estas por comprar {parcel_name} {parcel_price}",
-    "approved_balance": "Tu balance aprobado es {approved_balance}",
-    "needs_at_least": "Necesitas por lo menos {mana} para comprar esta LAND.",
-    "buy_mana": "{click_here} para comprar MANA.",
-    "didnt_approve": "No has autorizado el uso de MANA",
-    "please_approve":
-      "Por favor entra en {settings_link} y permite al contrato de Mercado a operar MANA por tu cuenta",
-    "total_balance": "Tu balance es {balance}"
-  },
   "parcel_publish": {
     "list_land": "Publicar LAND para la venta",
-    "set_land_price":
-      "Configura un precio y fecha de expiración para {parcel_name}",
+    "set_land_price": "Configura un precio y fecha de expiración para {parcel_name}",
     "price": "Precio",
     "price_placeholder": "Precio en MANA para esta LAND",
     "expiration": "Expiración",
     "expiration_placeholder": "Fecha de expiración para esta publicación",
     "already_sold": "Esta LAND ya se encuentra en venta a {value}",
-    "please_authorize":
-      "Tienes que ir a {settings_link} y autorizar al Mercado para operar LAND por tu cuenta antes de publicarla en venta.",
+    "please_authorize": "Tienes que ir a {settings_link} y autorizar al Mercado para operar LAND por tu cuenta antes de publicarla en venta.",
     "errors": {
       "minimum_expiration": "La fecha mínima de expiracion es {date}",
       "maximum_expiration": "La fecha máxima de expiración es {date}",
@@ -165,27 +179,60 @@
       "maximum_land_price": "El precio máximo de una LAND es {value} MANA"
     }
   },
-  "parcel_cancel": {
-    "cancel_land": "Cancelar la venta de LAND",
-    "about_to_cancel": "Estás por cancelar la venta de {parcel}.",
-    "not_for_sale": "La parcela {parcel} no está en venta."
+  "parcel_tags": {
+    "road": "Camino",
+    "plaza": "Plaza",
+    "district": "Distrito",
+    "adjacent": "Adyacente",
+    "proximity": "{distance} {distance, plural, one {parcela} other {parcelas}} de distancia"
   },
-  "activity": {
-    "no_activity": "No tienes actividad por el momento.",
-    "start": "Puedes comenzar aprobando MANA desde {settings_link}",
-    "pending": "Pendiente",
-    "completed": "Completada"
+  "parcel_transfer": {
+    "transfer_land": "Transferir LAND",
+    "about_to_transfer": "Estas por transferir {parcel_name}",
+    "irreversible": "Recuerda que transferir LAND es una operación irreversible.",
+    "check_address": "Por favor revisa la dirección cuidadosamente",
+    "cant_transfer": "Esta LAND no puede ser transferida porque se encuentra en venta.",
+    "recipient_address": "Dirección de destino",
+    "unknown_error": "Un problema desconocido ha ocurrido, los detalles se encuentran debajo.",
+    "error_persists": "Si el problema persiste, contáctate con nosotros en {community_chat_link}",
+    "placeholder": "Ejemplo: {address}"
+  },
+  "profile_page": {
+    "empty": "El usuario no tiene {content}",
+    "on_sale": "En Venta"
+  },
+  "publication": {
+    "acquired_at": "Adquirida en {date}",
+    "expired_at": "Expiró {time}",
+    "expires_in": "Expira {time}",
+    "expires_in_more_than_years": "Expira en más de {years} años",
+    "view": "Ver",
+    "sold": "Vendida",
+    "canceled": "Cancelada"
+  },
+  "settings": {
+    "pending_tx": "Tienes una transacción pendiente",
+    "disapprove_mana_check": "Desmarcando desautoriza el uso de MANA al contrato de Mercado",
+    "approve_mana_check": "Marcando autoriza el uso de MANA al contrato de Mercado",
+    "mana_approved": "Has autorizado al {marketplace_contract_link} a operar MANA por tu cuenta",
+    "approve_mana": "Autorizar al {marketplace_contract_link} a operar MANA por tu cuenta",
+    "marketplace_contract": "Contrato de Mercado",
+    "unauthorize_land_check": "Desmarcando desautoriza el uso de LAND al contrato de Mercado",
+    "authorize_land_check": "Marcando autoriza el uso de LAND al contrato de Mercado",
+    "you_authorized": "Has autorizado al {marketplace_contract_link} a operar MANA por tu cuenta",
+    "authorize": "Autorizar al {marketplace_contract_link} a operar MANA por tu cuenta",
+    "authorization": "Autorización"
+  },
+  "sign_in": {
+    "options": "En primer lugar tienes que buscar un lugar seguro para guardar tu LAND. Puedes usar la extensión {metamask_link} o una billetera física como {ledger_nano_link}.",
+    "account_unlocked": "Revisa que tu cuenta esté desbloqueada."
   },
   "transaction": {
-    "approved":
-      "Has autorizado al {marketplace_contract_link} para operar MANA por tu cuenta.",
-    "disapproved":
-      "Has desautorizado al {marketplace_contract_link} para operar MANA por tu cuenta.",
-    "authorize":
-      "Has {action} al {marketplace_contract_link} para operar LAND por tu cuenta.",
+    "approved": "Has autorizado al {marketplace_contract_link} para operar MANA por tu cuenta.",
+    "disapproved": "Has desautorizado al {marketplace_contract_link} para operar MANA por tu cuenta.",
+    "authorize": "Has {action} al {marketplace_contract_link} para operar LAND por tu cuenta.",
     "transfer_mana": "Has transferido {mana} MANA a {address_link}",
-    "edit":
-      "Has editado {parcel_link} con el nombre \"{name}\" y la descripción \"{description}\"",
+    "edit": "Has editado {parcel_link} con el nombre \"{name}\" y la descripción \"{description}\"",
     "transfer": "Has transferido {parcel_link} a {owner_link}",
     "publish": "Has publicado {parcel_link}",
     "buy": "Has comprado {parcel_link}",
@@ -193,96 +240,23 @@
     "buy_mana": "Has comprado {mana} MANA"
   },
   "transaction_status": {
-    "see_activity":
-      "Para ver el historial de transacciones, visita tu {activity_link}.",
+    "see_activity": "Para ver el historial de transacciones, visita tu {activity_link}.",
     "text": {
       "pending": "Tu transacción está esperando ser confirmada.",
-      "failed":
-        "Tu transacción ha fallado, puedes intentar enviándola nuevamente."
+      "failed": "Tu transacción ha fallado, puedes intentar enviándola nuevamente."
     },
     "parcel": {
-      "still_pending":
-        "{parcel_name} todavía tiene {transactions_count} {transactions_count, plural, one {transacción pendiente} other {transacciones pendientes}}."
+      "still_pending": "{parcel_name} todavía tiene {transactions_count} {transactions_count, plural, one {transacción pendiente} other {transacciones pendientes}}."
     },
     "idle": {
       "please_confirm": "Por favor confirma la transacción"
     }
   },
-  "settings": {
-    "pending_tx": "Tienes una transacción pendiente",
-    "disapprove_mana_check":
-      "Desmarcando desautoriza el uso de MANA al contrato de Mercado",
-    "approve_mana_check":
-      "Marcando autoriza el uso de MANA al contrato de Mercado",
-    "mana_approved":
-      "Has autorizado al {marketplace_contract_link} a operar MANA por tu cuenta",
-    "approve_mana":
-      "Autorizar al {marketplace_contract_link} a operar MANA por tu cuenta",
-    "marketplace_contract": "Contrato de Mercado",
-    "unauthorize_land_check":
-      "Desmarcando desautoriza el uso de LAND al contrato de Mercado",
-    "authorize_land_check":
-      "Marcando autoriza el uso de LAND al contrato de Mercado",
-    "you_authorized":
-      "Has autorizado al {marketplace_contract_link} a operar MANA por tu cuenta",
-    "authorize":
-      "Autorizar al {marketplace_contract_link} a operar MANA por tu cuenta",
-    "authorization": "Autorización"
-  },
   "transfer_mana": {
     "title": "Transferir MANA",
     "action": "Transferir",
     "current_balance": "Tu balance actual es {balance}",
-    "irreversible":
-      "Recuerda que transferir MANA es una operación irreversible.",
+    "irreversible": "Recuerda que transferir MANA es una operación irreversible.",
     "own_address_warning": "Esa es tu propia dirección!"
-  },
-  "buy_mana": {
-    "title": "Convertir ETH en MANA",
-    "action": "Comprar Más",
-    "available_eth": "Disponible: {eth} ETH",
-    "receive": "Recibir",
-    "pay_with": "Pagar con",
-    "powered_by": "por {bancor_link}",
-    "rate": "Tasa",
-    "slippage": "Deslizamiento",
-    "not_enough": "No tienes suficiente ETH para pagar esto",
-    "amount_too_big": "Este monto es demaciado grande para la red de Bancor"
-  },
-  "derivation_path": {
-    "invalid":
-      "El derivation path es incorrecto. Debe seguir el siguiente patrón 44'/60|61'/x'/n"
-  },
-  "color_key": {
-    "title": "Mapa de colores",
-    "yours": "Tuya",
-    "taken": "Asignada",
-    "district": "Distrito",
-    "contribution": "Contribución",
-    "roads": "Caminos",
-    "plaza": "Plaza",
-    "unowned": "Sin dueño",
-    "loading": "Cargando",
-    "on_sale": "En venta"
-  },
-  "sign_in": {
-    "options":
-      "En primer lugar tienes que buscar un lugar seguro para guardar tu LAND. Puedes usar la extensión {metamask_link} o una billetera física como {ledger_nano_link}.",
-    "account_unlocked": "Revisa que tu cuenta esté desbloqueada."
-  },
-  "footer": {
-    "color_key": "Mapa de Colores",
-    "privacy_policy": "Política de Privacidad",
-    "terms": "Términos & Condiciones",
-    "copyright": "© 2018 Decentraland. Todos los derechos reservados.",
-    "mini_copyright": "© 2018 Decentraland."
-  },
-  "homepage": {
-    "hero_title": "Elige tu ubicación ideal en Genesis City",
-    "hero_subtitle": "Mercado de LAND de Decentraland. Sin comisiones.",
-    "get_started": "Comenzar",
-    "watch_tutorial": "Mira el tutorial",
-    "newest_lands": "Nuevas LAND",
-    "view_more": "Ver Más"
   }
 }
